Exciting to finish my first website

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <section class="top-banner">
         <Div class="half-width">
             <h1>Welcome To</h1>
-            <h1><span class="name-highlight">Epsita</span> Website</h1>
+            <h1><span class="orange-highlight">Epsita</span> Website</h1>
             <h3>Professional Web Developer</h3>
          <p>
             Web development is the fastest-growing sector of Software development. It has the best career path with rapid growth and a handsome salary package, providing high job security and luxury of life. So I want to be part of that team and be among 100 by 2021.
@@ -38,6 +38,28 @@
             <a class="link-button" target="_blank" href="https://www.linkedin.com/in/epsita-azad-b839a61b5/">VISIT MY RESUME</a>
         </div>
     </section>
+    <section class="experience-area">
+        <h2>Experiences</h2>
+        <div id="full-stack" class="half-width single-experience">
+            <h2>Full Stack Web Developer</h2>
+            <h3 class="orange-highlight">2021-Present |Pro level Web Developer</h3>
+            <p>Over the years my skills developed under Programing Hero leadership and became a full stack web developer with knowledge to build website, Agile/Lean programming, teamwork, and the ability to perform to goals.
+                •	Built an ecommerce webapp to sell products online. Increased sales by 58%.
+                •	Designed a customer web form for a local dentist's office. Increased patient satisfaction scores by 30%.& developed a launch website for Abacus. 
+                •	
+                 </p>
+        </div>
+        <div id="junior-web" class="half-width single-experience">
+            <h2>Junior Web Developer</h2>
+            <h3 class="orange-highlight">2020-2021 |Programming Hero Learner</h3>
+            <p>Over the years I failed to keep up to date with new standards and web design tools and I found myself falling farther and farther behind in the industry. I thought the wonderful world of web design had passed me by. It was then Programming Hero in 2020 and by their guidance able to start work for a company. I building started updating their existing one, even volunteering to manage my other’s website, I managed to keep the web design dream somewhat alive.</p>
+
+        </div>
+
+    </section>
+    <footer> 
+        <p> ** Epsita 2021 @ all rights reserved.</p>
+    </footer>
 
 </body>
 </html>
